# open-vpm-bootstrap

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
