[package]
name = "open-vpm-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["rustls-tls", "hyper-rustls", "gzip", "json", "blocking"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.9.0"
url = { version = "2.5.0", features = ["serde"] }
