[package]
name = "open-vpm-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.0", features = ["rustls-tls", "gzip", "json", "blocking"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.9.0"
url = { version = "2.5.0", features = ["serde"] }
